# Fen-To-Board-Image

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  fenToBoardImage.py  main.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  main.yml  test.yml
docs/: examples.md  getting-started.md  index.md
docs/api/: fen-parser.md  main.md
examples/: complete_example.py  complex_position_example.py  coordinates_example.py  custom_colors_example.py  flipped_board_example.py  last_move_example.py  render_board.py  render_board_arrows.py  render_board_coordinates.py  requirements.txt
fenToBoardImage/: __init__.py  fenToBoardImage.py  main.py
fenToBoardImage/lib/: fenparser.py
fentoboardimage/: Arrows.py  Checkerboard.py  Coordinates.py  FenParser.py  Pieces.py  Utils.py  __init__.py  fen_parser.py  main.py  test.py
test/: pyproject.toml  test.py  test_image_diff.py  test_unit.py
