[tool.poetry]
name = "fenToBoardImage"
version = "1.3.0"
description = "FenToBoardImage takes a Fen string representing a Chess position, and renders a Pillow image of the resulting position."
authors = ["Reed Krawiec <reedkrawiec@gmail.com>"]
license = "GPL3"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.0"
typing-extensions = "^4.10.0"

[tool.poetry.dev-dependencies]
Pillow = "^9.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
