[tool.poetry]
name = "fenToBoardImage"
version = "1.3.0"
description = "FenToBoardImage takes a Fen string representing a Chess position, and renders a Pillow image of the resulting position."
authors = ["Reed Krawiec <reedkrawiec@gmail.com>"]
license = "GPL3"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.7"
Pillow = [
  { version = "^9.0.0", python = "<3.11" },
  { version = "^11.0.0", python = ">=3.11" }
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
