[project]
name = "fentoboardimage"
version = "1.4.1"
description = "FenToBoardImage takes a Fen string representing a Chess position, and renders a Pillow image of the resulting position."
authors = [
    {name = "Reed Krawiec", email = "reedkrawiec@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pillow>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
dev-docs = [
    "mkdocs>=1.6.1; python_version >= '3.10'",
    "mkdocs-material>=9.7.1; python_version >= '3.10'",
    "mkdocstrings[python]>=1.0.0; python_version >= '3.10'",
]
dev-lint = [
    "black>=25.12.0; python_version >= '3.10'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
